2015-05-22  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/encoding.c, ext/oci8/env.c,
	  ext/oci8/extconf.rb, ext/oci8/lob.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/ocinumber.c, ext/oci8/thread_util.c,
	  ext/oci8/thread_util.h, lib/oci8/bindtype.rb, lib/oci8/encoding-init.rb,
	  lib/oci8/oci8.rb: Drop ruby 1.8 support.

2015-04-04  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.7 and 2.1.8.
	* VERSION: update to 2.1.8.
	* dist-files: add new files.

2015-04-04  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h: Add a macro for old rubies which
	    don't have rb_str_set_len().
	* ext/oci8/hook_funcs.c: Suppress a warning.

2015-04-04  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: Increase the buffer size to read a LOB.

2015-04-04  Kubo Takehiro  <kubo@jiubao.org>
	* docs/install-instant-client.md, ext/oci8/lob.c, ext/oci8/metadata.c,
	  ext/oci8/oci8.c: Update documents for YARD.

2015-04-02  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: Fix SEGV when a temporary LOB is freed by GC
	    while reading another lob and the ruby version is 2.0.0 or
	    upper.

2015-03-01  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/cursor.rb, lib/oci8/properties.rb:
	    Fix errors while generating documents by yard such as
	    "Exception occurred while generating 'OCI8/Cursor.html'."

2015-03-01  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/oci8.h: Rollback transactions on
	    logoff only when the transactions are in progress.

2015-01-27  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocihandle.c, ext/oci8/ocinumber.c, ext/oci8/oradate.c,
	  ext/oci8/stmt.c: Suppreess warnings: "[warn]: @param tag has unknown parameter name: xxx"
            by yard.

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: Add OCI8#send_timeout, OCI8#send_timeout=,
	    OCI8#recv_timeout and OCI8#recv_timeout=.

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>