@@ -258,12 +258,10 @@ VALUE oci8_get_error_message(ub4 msgno, const char *default_msg)
     const char *errmsg = NULL;
     char msgbuf[64];
 
-    if (have_OCIMessageGet) {
-        if (msghp == NULL) {
-            chkerr(OCIMessageOpen(oci8_envhp, oci8_errhp, &msghp, TO_CONST_ORATEXT("rdbms"), TO_CONST_ORATEXT("ora"), OCI_DURATION_PROCESS));
-        }
-        errmsg = TO_CHARPTR(OCIMessageGet(msghp, msgno, NULL, 0));
+    if (msghp == NULL) {
+        chkerr(OCIMessageOpen(oci8_envhp, oci8_errhp, &msghp, TO_CONST_ORATEXT("rdbms"), TO_CONST_ORATEXT("ora"), OCI_DURATION_PROCESS));
     }
+    errmsg = TO_CHARPTR(OCIMessageGet(msghp, msgno, NULL, 0));
     if (errmsg == NULL) {
         if (default_msg != NULL) {
             errmsg = default_msg;
