@@ -265,10 +265,10 @@ static VALUE oracle_client_vernum; /* Oracle client version number */
  *  It is devided into 5 parts: 8, 4, 8, 4 and 8 bits.
  *
  *  @example
- *    # Oracle 9.2.0.4
- *    oracle_client_vernum # => 0x09200400
- *                         # => 0x09 2 00 4 00
- *                         # => 9.2.0.4.0
+ *    # Oracle 10.2.0.4
+ *    oracle_client_vernum # => 0x0a200400
+ *                         # => 0x0a 2 00 4 00
+ *                         # => 10.2.0.4.0
  *
  *    # Oracle 11.1.0.7.0
  *    oracle_client_vernum # => 0x0b100700
@@ -935,20 +935,8 @@ static VALUE oci8_ping(VALUE self)
  *
  *  Sets the specified value to {V$SESSION.CLIENT_IDENTIFIER}[http://docs.oracle.com/database/121/REFRN/refrn30223.htm#r62c1-t21].
  *
- *  === Oracle 9i client or upper
- *
  *  The specified value is sent to the server by piggybacking on the next network
  *  round trip issued by {OCI8#exec}, {OCI8#ping} and so on.
- *
- *  === Oracle 8i client or lower
- *
- *  This executes the following PL/SQL block internally.
- *
- *    BEGIN
- *      DBMS_SESSION.SET_IDENTIFIER(:client_id);
- *    END;
- *
- *  See {Oracle Manual: Oracle Database PL/SQL Packages and Types Reference}[http://download.oracle.com/docs/cd/B19306_01/appdev.102/b14258/d_sessio.htm#i996935]
  *
  *  @param [String] client_identifier
  *  @since 2.0.3
@@ -968,29 +956,12 @@ static VALUE oci8_set_client_identifier(VALUE self, VALUE val)
         size = 0;
     }
 
-    if (oracle_client_version >= ORAVERNUM(9, 2, 0, 3, 0) || size > 0) {
-        if (size > 0 && ptr[0] == ':') {
-            rb_raise(rb_eArgError, "client identifier should not start with ':'.");
-        }
-        chker2(OCIAttrSet(svcctx->usrhp, OCI_HTYPE_SESSION, (dvoid*)ptr,
-                          size, OCI_ATTR_CLIENT_IDENTIFIER, oci8_errhp),
-               &svcctx->base);
-    } else {
-        /* Workaround for Bug 2449486 */
-        oci8_exec_sql_var_t bind_vars[1];
-
-        /* :client_id */
-        bind_vars[0].valuep = (dvoid*)ptr;
-        bind_vars[0].value_sz = size;
-        bind_vars[0].dty = SQLT_CHR;
-        bind_vars[0].indp = NULL;
-        bind_vars[0].alenp = NULL;
-
-        oci8_exec_sql(svcctx,
-                      "BEGIN\n"
-                      "  DBMS_SESSION.SET_IDENTIFIER(:client_id);\n"
-                      "END;\n", 0, NULL, 1, bind_vars, 1);
+    if (size > 0 && ptr[0] == ':') {
+        rb_raise(rb_eArgError, "client identifier should not start with ':'.");
     }
+    chker2(OCIAttrSet(svcctx->usrhp, OCI_HTYPE_SESSION, (dvoid*)ptr,
+                      size, OCI_ATTR_CLIENT_IDENTIFIER, oci8_errhp),
+           &svcctx->base);
     return val;
 }
 
@@ -1001,26 +972,6 @@ static VALUE oci8_set_client_identifier(VALUE self, VALUE val)
  *  This is also stored in {V$SQL.MODULE}[http://docs.oracle.com/database/121/REFRN/refrn30246.htm#r49c1-t58]
  *  and {V$SQLAREA.MODULE}[http://docs.oracle.com/database/121/REFRN/refrn30259.htm#r46c1-t94]
  *  when an SQL statement is first parsed in the Oracle server.
- *
- *  === Oracle 10g client or upper
- *
- *  The specified value is sent to the server by piggybacking on the next network
- *  round trip issued by {OCI8#exec}, {OCI8#ping} and so on.
- *
- *  === Oracle 9i client or lower
- *
- *  This executes the following PL/SQL block internally.
- *
- *    DECLARE
- *      action VARCHAR2(32);
- *    BEGIN
- *      -- retrieve action name.
- *      SELECT SYS_CONTEXT('USERENV','ACTION') INTO action FROM DUAL;
- *      -- change module name without modifying the action name.
- *      DBMS_APPLICATION_INFO.SET_MODULE(:module, action);
- *    END;
- *
- *  See {Oracle Manual: Oracle Database PL/SQL Packages and Types Reference}[http://download.oracle.com/docs/cd/B19306_01/appdev.102/b14258/d_appinf.htm#i999254]
  *
  *  @param [String] module
  *  @since 2.0.3
@@ -1039,30 +990,9 @@ static VALUE oci8_set_module(VALUE self, VALUE val)
         ptr = "";
         size = 0;
     }
-    if (oracle_client_version >= ORAVER_10_1) {
-        /* Oracle 10g or upper */
-        chker2(OCIAttrSet(svcctx->usrhp, OCI_HTYPE_SESSION, (dvoid*)ptr,
-                          size, OCI_ATTR_MODULE, oci8_errhp),
-               &svcctx->base);
-    } else {
-        /* Oracle 9i or lower */
-        oci8_exec_sql_var_t bind_vars[1];
-
-        /* :module */
-        bind_vars[0].valuep = (dvoid*)ptr;
-        bind_vars[0].value_sz = size;
-        bind_vars[0].dty = SQLT_CHR;
-        bind_vars[0].indp = NULL;
-        bind_vars[0].alenp = NULL;
-
-        oci8_exec_sql(svcctx,
-                      "DECLARE\n"
-                      "  action VARCHAR2(32);\n"
-                      "BEGIN\n"
-                      "  SELECT SYS_CONTEXT('USERENV','ACTION') INTO action FROM DUAL;\n"
-                      "  DBMS_APPLICATION_INFO.SET_MODULE(:module, action);\n"
-                      "END;\n", 0, NULL, 1, bind_vars, 1);
-    }
+    chker2(OCIAttrSet(svcctx->usrhp, OCI_HTYPE_SESSION, (dvoid*)ptr,
+                      size, OCI_ATTR_MODULE, oci8_errhp),
+           &svcctx->base);
     return self;
 }
 
@@ -1074,20 +1004,8 @@ static VALUE oci8_set_module(VALUE self, VALUE val)
  *  and {V$SQLAREA.ACTION}[http://docs.oracle.com/database/121/REFRN/refrn30259.htm#r48c1-t94]
  *  when an SQL statement is first parsed in the Oracle server.
  *
- *  === Oracle 10g client or upper
- *
  *  The specified value is sent to the server by piggybacking on the next network
  *  round trip issued by {OCI8#exec}, {OCI8#ping} and so on.
- *
- *  === Oracle 9i client or lower
- *
- *  This executes the following PL/SQL block internally.
- *
- *    BEGIN
- *      DBMS_APPLICATION_INFO.SET_ACTION(:action);
- *    END;
- *
- *  See {Oracle Manual: Oracle Database PL/SQL Packages and Types Reference}[http://download.oracle.com/docs/cd/B19306_01/appdev.102/b14258/d_appinf.htm#i999254]
  *
  *  @param [String] action
  *  @since 2.0.3
@@ -1106,27 +1024,9 @@ static VALUE oci8_set_action(VALUE self, VALUE val)
         ptr = "";
         size = 0;
     }
-    if (oracle_client_version >= ORAVER_10_1) {
-        /* Oracle 10g or upper */
-        chker2(OCIAttrSet(svcctx->usrhp, OCI_HTYPE_SESSION, (dvoid*)ptr,
-                          size, OCI_ATTR_ACTION, oci8_errhp),
-               &svcctx->base);
-    } else {
-        /* Oracle 9i or lower */
-        oci8_exec_sql_var_t bind_vars[1];
-
-        /* :action */
-        bind_vars[0].valuep = (dvoid*)ptr;
-        bind_vars[0].value_sz = size;
-        bind_vars[0].dty = SQLT_CHR;
-        bind_vars[0].indp = NULL;
-        bind_vars[0].alenp = NULL;
-
-        oci8_exec_sql(svcctx,
-                      "BEGIN\n"
-                      "  DBMS_APPLICATION_INFO.SET_ACTION(:action);\n"
-                      "END;\n", 0, NULL, 1, bind_vars, 1);
-    }
+    chker2(OCIAttrSet(svcctx->usrhp, OCI_HTYPE_SESSION, (dvoid*)ptr,
+                      size, OCI_ATTR_ACTION, oci8_errhp),
+           &svcctx->base);
     return val;
 }
 
@@ -1135,20 +1035,8 @@ static VALUE oci8_set_action(VALUE self, VALUE val)
  *
  *  Sets the specified value to {V$SESSION.CLIENT_INFO}[http://docs.oracle.com/database/121/REFRN/refrn30223.htm#r44c1-t21].
  *
- *  === Oracle 10g client or upper
- *
  *  The specified value is sent to the server by piggybacking on the next network
  *  round trip issued by {OCI8#exec}, {OCI8#ping} and so on.
- *
- *  === Oracle 9i client or lower
- *
- *  This executes the following PL/SQL block internally.
- *
- *    BEGIN
- *      DBMS_APPLICATION_INFO.SET_CLIENT_INFO(:client_info);
- *    END;
- *
- *  See {Oracle Manual: Oracle Database PL/SQL Packages and Types Reference}[http://download.oracle.com/docs/cd/B19306_01/appdev.102/b14258/d_appinf.htm#CHEJCFGG]
  *
  *  @param [String] client_info
  *  @since 2.0.3
@@ -1167,27 +1055,9 @@ static VALUE oci8_set_client_info(VALUE self, VALUE val)
         ptr = "";
         size = 0;
     }
-    if (oracle_client_version >= ORAVER_10_1) {
-        /* Oracle 10g or upper */
-        chker2(OCIAttrSet(svcctx->usrhp, OCI_HTYPE_SESSION, (dvoid*)ptr,
-                          size, OCI_ATTR_CLIENT_INFO, oci8_errhp),
-               &svcctx->base);
-    } else {
-        /* Oracle 9i or lower */
-        oci8_exec_sql_var_t bind_vars[1];
-
-        /* :client_info */
-        bind_vars[0].valuep = (dvoid*)ptr;
-        bind_vars[0].value_sz = size;
-        bind_vars[0].dty = SQLT_CHR;
-        bind_vars[0].indp = NULL;
-        bind_vars[0].alenp = NULL;
-
-        oci8_exec_sql(svcctx, 
-                      "BEGIN\n"
-                      "  DBMS_APPLICATION_INFO.SET_CLIENT_INFO(:client_info);\n"
-                      "END;\n", 0, NULL, 1, bind_vars, 1);
-    }
+    chker2(OCIAttrSet(svcctx->usrhp, OCI_HTYPE_SESSION, (dvoid*)ptr,
+                      size, OCI_ATTR_CLIENT_INFO, oci8_errhp),
+           &svcctx->base);
     return val;
 }
 
