@@ -74,7 +74,7 @@ static VALUE oci8_stmt_initialize(VALUE self, VALUE svc, VALUE sql)
 
     svcctx = oci8_get_svcctx(svc);
     oci8_check_pid_consistency(svcctx);
-    if (!NIL_P(sql) && oracle_client_version >= ORAVER_9_2) {
+    if (!NIL_P(sql)) {
         OCI8SafeStringValue(sql);
 
         rv = OCIStmtPrepare2_nb(svcctx, svcctx->base.hp.svc, &stmt->base.hp.stmt, oci8_errhp, RSTRING_ORATEXT(sql), RSTRING_LEN(sql), NULL, 0, OCI_NTV_SYNTAX, OCI_DEFAULT);
