@@ -1,3 +1,9 @@
+2015-05-23  Kubo Takehiro  <kubo@jiubao.org>
+	* ext/oci8/bind.c, ext/oci8/encoding.c, ext/oci8/error.c, ext/oci8/oci8.c,
+	  ext/oci8/oci8lib.c, ext/oci8/ocidatetime.c, ext/oci8/stmt.c,
+	  lib/oci8/metadata.rb, lib/oci8/properties.rb:
+	    Drop Oracle 9i support.
+
 2015-05-22  Kubo Takehiro  <kubo@jiubao.org>
 	* ext/oci8/apiwrap.c.tmpl, ext/oci8/encoding.c, ext/oci8/env.c,
 	  ext/oci8/extconf.rb, ext/oci8/lob.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
